# mycapapp

./: .env  .gitignore  README.md  app.py  clustering.py  data4.csv  pipeline.ipynb  pyproject.toml  requirements.txt  test.ipynb  test_data2.csv  text_embedding.py  utils.py
output/: embeddings.csv
